# hpi-evolving-identity

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
documentation/: book.toml
documentation/src/: SUMMARY.md  book_code.rs  concepts.md  dummy_eid.md  introduction.md  mls_eid.md
documentation/src/concepts/: 01_concepts.md  01_evolving_identity.md  02_traits.md  02_traits_and_types.md  evolving_identity.md  mls_eid.md  traits.md
documentation/src/conepts/: mls_eid.md
documentation/src/eid_mls_example/: Cargo.toml
documentation/src/eid_mls_example/src/: main.rs
documentation/src/mls_eid/: add.md  create_backend.md  create_eid_member.md  create_transcript.md  evolve.md  example.md  remove.md  update.md
documentation/src/mls_eid/create_client/: 04_create_initial_client.md  06_join_from_invitation.md  create_client.md
documentation/src/mls_eid/user_manual/: 01_create_backend.md  02_credentials.md  03_create_key_package.md  05_add_members.md  06_join_from_invitation.md  07_remove_members.md  08_update_yourself.md  09_processing.md  10_example.md
documentation/src/user_manual/: README.md  add_members.md  create_eid.md  create_key_package.md  identity.md  join_from_invitation.md  processing.md  remove_members.md  update_yourself.md
eid/: Cargo.toml
eid/src/: lib.rs  test_utils.rs
eid/src/test_utils/: mod.rs
eid/tests/: book_code.rs  helpers.rs  test_eid.rs  test_eid_client.rs
eid_dummy/: Cargo.toml
eid_dummy/src/: eid_dummy_backend.rs  eid_dummy_client.rs  eid_dummy_evolvement.rs  eid_dummy_keypair.rs  eid_dummy_keystore.rs  eid_dummy_member.rs  eid_dummy_state.rs  eid_dummy_transcript.rs  lib.rs
eid_mls/: Cargo.toml
eid_mls/src/: eid_dummy_keystore.rs  eid_mls_backend.rs  eid_mls_client.rs  eid_mls_evolvement.rs  eid_mls_group_creation.rs  eid_mls_key_creation.rs  eid_mls_member.rs  eid_mls_state.rs  eid_mls_transcript.rs  lib.rs
eid_mls/src/state/: client_state.rs  mod.rs  state_trait.rs  transcript_state.rs
traits/: Cargo.toml
traits/src/: backend.rs  client.rs  evolvement.rs  key_store.rs  member.rs  provider.rs  state.rs  traits.rs  transcript.rs  types.rs
