[workspace]
members = [
    "eid",
    "eid_mls",
]

resolver = "2"
tls_codec = { version = "0.2.0", features = ["derive", "serde", "mls"] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", rev = "d6ba6d90509fa9b82b234b81a6b3db59c0640075" }

# Patching unreleased crates
[patch.crates-io.tls_codec]
git = "https://github.com/RustCrypto/formats.git"

[patch.crates-io.hpke-rs]
git = "https://github.com/franziskuskiefer/hpke-rs.git"

[patch.crates-io.hpke-rs-crypto]
git = "https://github.com/franziskuskiefer/hpke-rs.git"

[patch.crates-io.hpke-rs-evercrypt]
git = "https://github.com/franziskuskiefer/hpke-rs.git"

[patch.crates-io.hpke-rs-rust-crypto]
git = "https://github.com/franziskuskiefer/hpke-rs.git"