[workspace]
members = [
    "eid",
    "eid_mls",
]

resolver = "2"
tls_codec = { version = "0.2.0", features = ["derive", "serde", "mls"] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", branch = "konrad/public_group_api" }

# Patching unreleased crates
[patch.crates-io.tls_codec]
git = "https://github.com/RustCrypto/formats.git"

[patch.crates-io.hpke-rs]
git = "https://github.com/franziskuskiefer/hpke-rs.git"

[patch.crates-io.hpke-rs-crypto]
git = "https://github.com/franziskuskiefer/hpke-rs.git"


[patch.crates-io.hpke-rs-rust-crypto]
git = "https://github.com/franziskuskiefer/hpke-rs.git"