[package]
name = "eid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eid_traits = { version = "0.1.0", path = "../traits" }
eid_mls = { version = "0.1.0", path = "../eid_mls" } # todo , optional = true }
eid_dummy = { version = "0.1.0", path = "../eid_dummy", optional = true }
rstest = { version = "^0.15", optional = true }
rstest_reuse = { version = "0.4", optional = true }
rand = { version = "0.8.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
test = ["eid_mls/test", "eid_dummy", "lazy_static", "rstest", "rstest_reuse", "rand"]
