[package]
name = "eid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eid_traits = { version = "0.1.0", path = "../traits" }
eid_mls = { version = "0.1.0", path = "../eid_mls" }
eid_dummy = { version = "0.1.0", path = "../eid_dummy", optional = true }
rstest = { version = "0.16.0", optional = true }
rstest_reuse = { version = "0.5.0", optional = true }
rand = { version = "0.8.5", optional = true }
tls_codec = "0.2.0"

openmls = { git = "https://github.com/openmls/openmls.git", rev = "3f3be68588d1272dd75545b46339a751dfca4f15" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", rev = "3f3be68588d1272dd75545b46339a751dfca4f15" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", rev = "3f3be68588d1272dd75545b46339a751dfca4f15" }

[features]
test = ["eid_mls/test", "eid_traits/test", "eid_dummy", "eid_dummy/test", "rstest", "rstest_reuse", "rand"]

[[test]]
name = "test_eid"
required-features = ["test"]
