[package]
name = "eid_mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eid_traits = { version = "0.1.0", path = "../traits" }

# branch konrad/public_group_api, latest commit as of Feb 14, 2022
openmls = { git = "https://github.com/openmls/openmls.git", rev = "d6ba6d90509fa9b82b234b81a6b3db59c0640075" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", rev = "d6ba6d90509fa9b82b234b81a6b3db59c0640075" }
thiserror = "1.0"
tls_codec = "0.2.0"
openmls_traits = { git = "https://github.com/openmls/openmls.git", rev = "d6ba6d90509fa9b82b234b81a6b3db59c0640075" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", rev = "d6ba6d90509fa9b82b234b81a6b3db59c0640075" }

[features]
test = ["openmls/test-utils", "openmls_basic_credential/clonable"]
