[package]
name = "eid_mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eid_traits = { version = "0.1.0", path = "../traits" }

openmls = { git = "https://github.com/openmls/openmls.git", branch = "konrad/public_group_api" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", branch = "konrad/public_group_api" }
thiserror = "1.0"
tls_codec = "0.2.0"
openmls_traits = { git = "https://github.com/openmls/openmls.git", branch = "konrad/public_group_api" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", branch = "konrad/public_group_api" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
[features]
test = ["openmls/test-utils", "openmls_basic_credential/clonable"]
